--- a/Assignment-1/Solutions-Assgn1.tex
+++ b/Assignment-1/Solutions-Assgn1.tex
@@ -186,7 +186,7 @@ Although this is a general opinion, the exact variation of the test loss will de
 
 \subsection*{Part d}
 \begin{flushleft}
-It is possible to generate a tree to match the predictions of a 1-NN classifier. All we need is fully-constructed univariate decision tree. However it is generally impossible to match the decision boundary of 1-NN classifier. The 1-NN classifier has decision boundaries depicted by a Voronoi diagram (which are in some sense polyhedral), whereas the decision boundaries for a decision tree with the decisions as inequalities would be boxes with sides parallel to the axes.
+It is possible to generate a tree to match the \underline{training} predictions of a 1-NN classifier. All we need is fully-constructed univariate decision tree. However it is generally impossible to match the decision boundary of 1-NN classifier. The 1-NN classifier has decision boundaries depicted by a Voronoi diagram (which are in some sense polyhedral), whereas the decision boundaries for a decision tree with the decisions as inequalities would be boxes with sides parallel to the axes. Due to the existence of difference in the decision boundary, the generalization performance may be different.
 \end{flushleft}
 
 \section*{Question 5}
